Fix check_relocs/gc_sweep_hook mismatch

PR ld/16643
	* elflink.c (elf_gc_sweep): Call gc_sweep_hook for exactly
	the same conditions we called check_relocs.

(cherry picked from commit 9850436d9e423d66d67d27135896582b2725782e)